--- a/blur.ipynb
+++ b/blur.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -288,6 +288,37 @@
     }
    ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1],\n",
+       "        [2],\n",
+       "        [3]],\n",
+       "\n",
+       "       [[1],\n",
+       "        [2],\n",
+       "        [3]],\n",
+       "\n",
+       "       [[1],\n",
+       "        [2],\n",
+       "        [3]]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array = np.array([[1, 2, 3], [1, 2, 3], [1, 2, 3]])\n",
+    "np.reshape(array, array.shape + (1,))"
+   ]
   },
   {
    "cell_type": "code",
